--- a/src/main/resources/application.yaml
+++ b/src/main/resources/application.yaml
@@ -1,16 +1,25 @@
 spring:
+  datasource:
+    url: jdbc:mysql://${MYSQL_HOST:localhost}:3306/${MYSQL_DB:clinicdb}?createDatabaseIfNotExist=true&useSSL=false&serverTimezone=UTC&allowPublicKeyRetrieval=true
+    username: ${MYSQL_USER:clinicuser}
+    password: ${MYSQL_PASSWORD:strongpassword}
+    driver-class-name: com.mysql.cj.jdbc.Driver
+
   jpa:
     hibernate:
       ddl-auto: update
+    show-sql: true
+    properties:
+      hibernate:
+        format_sql: true
+
   application:
     name: clinic-management-system
-  datasource:
-    url: jdbc:mysql://localhost:3306/clinic_db?createDatabaseIfNotExist=true&useSSL=false&serverTimezone=UTC&allowPublicKeyRetrieval=true
-    username: ${MYSQL_USER}
-    password: ${MYSQL_PASS}
+
   thymeleaf:
     prefix: classpath:/templates/
     suffix: .html
+
   mvc:
     view:
       prefix: /templates/
@@ -20,6 +29,7 @@ spring:
     serialization:
       write-dates-as-timestamps: false
     date-format: java.text.SimpleDateFormat
+
 springdoc:
   api-docs:
     path: /api-docs
