--- a/src/main/resources/application.yaml
+++ b/src/main/resources/application.yaml
@@ -30,8 +30,12 @@ spring:
       write-dates-as-timestamps: false
     date-format: java.text.SimpleDateFormat
 
+server:
+  forward-headers-strategy: framework
+
 springdoc:
   api-docs:
     path: /api-docs
   swagger-ui:
     path: /swagger-ui.html
+
